--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html, body {
 
 table {
     color: black;
-    width: 500px;
+    width: 100%;
     height: auto;
     margin:1em auto;
     font-size: x-large;
