--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
 html, body {
     overflow: auto;
-}
-
-.wrapper {
     width: 100vw;
     height: 100vh;
     background: linear-gradient(#77A9BB, #5594AA);
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    overflow: auto;
+}
+
+.wrapper {
+    overflow: visible;
 }
 
 table {
@@ -26,8 +26,6 @@ tbody, td, tfoot, th, thead, tr {
 }
 
 td {
-    /* height: 0.5em;
-    width: 2em; */
     padding: 10px;
     text-align: center;
     border-right: 0.5px solid rgb(190, 190, 190);
