--- a/index.css
+++ b/index.css
@@ -1,14 +1,18 @@
-html, body {
-    overflow: auto;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(#77A9BB, #5594AA);
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+html {
+    width: 100%;
+    min-height: 100%;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
 }
 
+body {
+    width: 100%;
+    min-height: 100%;
+    color: white;
+    background: linear-gradient(#77A9BB, #5594AA);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .wrapper {
-    overflow: visible;
 }
 
 table {
@@ -74,11 +78,9 @@ tr:nth-child(3n) td {
 
 .TopContainer {
     margin-bottom: 50px;
-    overflow: hidden;
 }
 
 .main {
-    overflow: hidden;
 }
 
 #GameDescription a {
@@ -87,5 +89,4 @@ tr:nth-child(3n) td {
 
 .modal {
     color: black;
-    overflow: hidden;
 }
