--- a/index.css
+++ b/index.css
@@ -1,10 +1,18 @@
-html, body {
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(#77A9BB, #5594AA);
+html {
+    width: 100%;
+    min-height: 100%;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
+}
+
+body {
+    width: 100%;
+    min-height: 100%;
     color: white;
+    background: linear-gradient(#77A9BB, #5594AA);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    overflow: auto;
+}
+.wrapper {
 }
 
 table {
@@ -22,28 +30,26 @@ tbody, td, tfoot, th, thead, tr {
 }
 
 td {
-    /* height: 0.5em;
-    width: 2em; */
     padding: 10px;
     text-align: center;
-    border-right: 0.5px solid rgb(190, 190, 190);;
-    border-bottom: 0.5px solid rgb(190, 190, 190);;
+    border-right: thin solid rgb(54, 54, 54);
+    border-bottom: thin solid rgb(54, 54, 54);
 }
 
 td:first-child {
-    border-left: solid black;
+    border-left: medium solid black;
 }
 
 td:nth-child(3n) {
-    border-right: solid black;
+    border-right: medium solid black;
 }
 
 tr:first-child {
-    border-top: solid black;
+    border-top: medium solid black;
 }
 
 tr:nth-child(3n) td {
-    border-bottom: solid black;
+    border-bottom: medium solid black;
 }
 
 .btn-outline-secondary {
@@ -72,6 +78,9 @@ tr:nth-child(3n) td {
 
 .TopContainer {
     margin-bottom: 50px;
+}
+
+.main {
 }
 
 #GameDescription a {
